# SimpleVoxelEngine

./: CMakeLists.txt
include/core/: Application.h  Engine.h  Input.h  KeyCodes.h  Logger.h  Memory.h  MouseCodes.h  Time.h  Window.h
include/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
include/graphics/: Camera.h  IMesh.h  Renderer.h  Shader.h
include/graphics/objects/: Buffer.h  VertexArray.h
include/input/: InputManager.h
include/platform/: Platform.h
include/rendering/: Camera.h  GraphicsContext.h  Renderer.h  Shader.h  Window.h
include/rendering/OpenGL/: Buffer.h  IndexBuffer.h  RenderAPI.h  Shader.h  VertexArray.h  VertexBuffer.h
include/rendering/OpenGL/buffer/: Buffer.h  IndexBuffer.h  VertexBuffer.h
include/rendering/OpenGL/texture/: Texture.h  Texture2D.h  Texture2DArray.h  TextureCubeMap.h  TextureLayered.h
include/scene/: SceneManager.h
include/voxelEngine/: CameraController.h  ChunkScene.h
include/voxelEngine/voxelWorld/chunk/: Chunk.h  ChunkMesh.h
include/voxelEngine/voxelWorld/generation/: FlatTerrainGenerator.h  ITerrainGenerator.h  NaturalTerrainGenerator.h
include/voxelEngine/voxelWorld/utils/: DirectionUtils.h
include/voxelEngine/voxelWorld/voxel/: VoxelArray.h  VoxelType.h
include/voxelEngine/voxelWorld/world/: TextureColorPalette.h  VoxelRaycaster.h  World.h  WorldGenerator.h  WorldInteractor.h  WorldRenderer.h
resources/shaders/: chunk.frag  chunk.vert
src/: main.cpp
src/core/: Application.cpp  Engine.cpp  Input.cpp  Logger.cpp  Time.cpp  Window.cpp
src/graphics/: Camera.cpp  Renderer.cpp  Shader.cpp  Window.cpp
src/graphics/objects/: Buffer.cpp  VertexArray.cpp
src/input/: InputManager.cpp
src/platform/: Platform.cpp
src/rendering/: Camera.cpp  GraphicsContext.cpp  Renderer.cpp  Shader.cpp  Window.cpp
src/rendering/OpenGL/: Buffer.cpp  IndexBuffer.cpp  RenderAPI.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/rendering/OpenGL/buffer/: Buffer.cpp  IndexBuffer.cpp  VertexBuffer.cpp
src/rendering/OpenGL/texture/: Texture.cpp  Texture2D.cpp  Texture2DArray.cpp  TextureCubeMap.cpp  TextureLayered.cpp
src/scene/: SceneManager.cpp
src/voxelEngine/: CameraController.cpp  ChunkScene.cpp
src/voxelEngine/voxelWorld/chunk/: Chunk.cpp  ChunkMesh.cpp
src/voxelEngine/voxelWorld/generation/: FlatTerrainGenerator.cpp  NaturalTerrainGenerator.cpp
src/voxelEngine/voxelWorld/utils/: DirectionUtils.cpp
src/voxelEngine/voxelWorld/voxel/: VoxelArray.cpp  VoxelType.cpp
src/voxelEngine/voxelWorld/world/: TextureColorPalette.cpp  VoxelRaycaster.cpp  World.cpp  WorldGenerator.cpp  WorldInteractor.cpp  WorldRenderer.cpp
